[package]
name = "sertools"
authors = ["Finn Bear"]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/sertools/"
description = "Utilities for serde"

[dependencies]
serde = "1"

[dev-dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"